Form for adding ports added. Still need to fix the issue regarding spacing of ports.

--- a/css/style.css
+++ b/css/style.css
@@ -1,52 +1,15 @@
 html, body {
     height: 100%;
-    background-color: black;
-}
-
-header {
-    font-family: 'Press Start 2P', cursive;
-    text-align: center;
-}
-
-h1 {
-    height: 20px;
-    color: white
-}
-
-ul {
-    font-size: 15px;
-    list-style-type: none;
-}
-
-form {
-    color: white;
-}
-
-p {
-    width: 60%;
-    margin-left: 20%;
-    margin-right: 20%;
-    text-align: center;
-    color: rgb(128, 255, 249);
-    font-family: 'Press Start 2P', cursive;
-    font-size: 10px;
-    background-color: black;
-}
-
-#display {
-    width: 100%;
-    height: 45px;
-    background-color: black;
-    color: #FB3640;
     font-family: 'Press Start 2P', cursive;
 }
 
-#shipscreen {
+body {
+    background-color: black;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: black;
 }
+
 
 #viewport {
     width: 640px;
@@ -58,7 +21,6 @@ p {
 
 #ports {
     margin-top: 96px;
-    margin-left: 30px;
     display: flex;
     justify-content: space-around;
 }
@@ -72,8 +34,8 @@ p {
 #ship {
     width: 128px;
     height: 64px;
-    position: absolute;
     background-image: url('../images/ship.png');
+    position: absolute;
 }
 
 #sailbutton {
@@ -104,4 +66,29 @@ p {
     bottom: 0;
     border-top: 3px solid black;
     background-color: white;
+}
+
+
+#form {
+    height: 100%;
+}
+
+form {
+    height: 200px;
+    width: 280px;
+    color: white;
+    background-color: black;
+}
+
+#display {
+    height: 100%;
+    width: 280px;
+    background-color: black;
+    color: #FB3640;
+    font-family: 'Press Start 2P', cursive;
+}
+
+ul {
+    font-size: 15px;
+    list-style-type: none;
 }
